--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,7 @@ body {
 
 /* Estilização do Menu de Navegação superior */
 .nav {
+  flex-shrink: 0;
   background-color: var(--secondary-text-color);
   font-family: 'Montserrat', sans-serif;
   color: var(--secondary-text-color);
@@ -73,17 +74,19 @@ body {
 /* Início do Main - Lado esquerdo*/
 .main {
   display: flex;
-  justify-content:space-between;
+  justify-content:center;
   margin: 10px 100px;
+  flex-wrap: wrap;
 }
 
 .main-left {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  width: 33%;
-  position: fixed;
+  gap: 25px;
+  position: static;
   top: 150px;
+  flex: 1 1 300px;
+  min-width: 280px;
 }
 
 .presentation-links-subtitle {
@@ -113,17 +116,18 @@ body {
 
 
 /* Início do Main - parte central*/
-.main-middle-left {
+.main-middle {
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 300px;
-  width: 33%;
+  margin: 0;
+  flex: 1 1 300px; 
+  min-width: 380px; 
 }
 
-.main-middle-right {
+.main-right {
   display: flex;
   flex-direction: column;
-  width: 33%;
+  flex: 1 1 300px;
 }
 
 .main-middle-title {
@@ -136,7 +140,6 @@ font-size: 1.25rem;
   width: 40px;
   margin-bottom: 10px;
 }
-
 
 .main-middle-article {
   display: flex;
@@ -159,11 +162,7 @@ font-size: 1.25rem;
 }
 
 
-
-
-
 /* Rodapé */
-
 .footer {
     padding: 12px;
     color: var(--secondary-text-color);
@@ -172,47 +171,73 @@ font-size: 1.25rem;
     flex-shrink: 0;
     background-color: linear-gradient(135deg,var(--primary-color) 10%, var(--secondary-color) 90%);
     font-family: var(--secondary-font);
-
 }
 
 
 @media (max-width: 844px) {
-
+  .nav-menu {
+  height: auto;
+  flex-direction: column; 
+  gap: 10px;
+  }
+    
   body {
     width: 100%;
   }
 
+  .main {
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+  }
+
+  .main-left {
+    width: 90%;
+    height: auto;
+    margin-left: 2rem;
+    margin-bottom: 20px;
+  }
+
+  .main-middle,
+  .main-right {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .main-middle-article {
+    width: 90%;
+    height: auto;
+    margin-left: 1rem;
+  }
 
   .logo {
     width: auto;
     margin-left: unset;
+    display: flex;
+    justify-content: center;
+  }
+
+  .logo-image {
+    width: 80%;
   }
 
   .title {
-    margin-left:unset;
-    width: unset;
+    margin-left: unset;
+    width: 100%;
+    text-align: center;
+    font-size: 1.8rem;
   }
   
-  .main {
-    flex-direction: column-reverse;
- 
+  .presentation-links-nav {
+  width: 90%;
+  justify-content: flex-start;
+  padding: 10px;
+  gap: 10px;
   }
 
-  .main-left {
-    position: unset;
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
-
-  .main-middle-left {
-    margin-top: 30px;
-    width: 100%;
-    gap: 5px;
-  }
-
-  .main-middle-right {
-    margin-top: 30px;
-    width: 100%;
-    gap: 5px;
-  }
-
-
 }
